fix buttons pagination position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,11 @@
 
   <app-form-popup></app-form-popup>
 
-  <div class="buttons-next-back-container">
-    <button class="btn-new" (click)="backPage()"><</button>
-    <span>{{parsePage()}}</span>
-    <button class="btn-new" (click)="nextPage()">></button>
+  <div class="center">
+    <div class="buttons-next-back-container">
+      <button class="btn-new" (click)="backPage()"><</button>
+      <span>{{parsePage()}}</span>
+      <button class="btn-new" (click)="nextPage()">></button>
+    </div>
   </div>
 </div>
