--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,9 +15,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0px 9px;
+    align-items: center;
+    width: 150px;
+    margin: 0 9px;
 }
 
-.buttons-next-back-container button {
-    
+.center {
+    display: flex;
+    justify-content: center;
 }
