--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 
 <div class="header">
     <form class="form-grup-container">
-        <input class="form-input" type="text" name="searchId" id="searchId" placeholder="Buscar" [(ngModel)]="search" (keyup)="onSearch($event)"/> 
+        <input class="form-input" type="text" name="searchId" id="searchId" placeholder="Busca tu pokemón favorito..." [(ngModel)]="search" (keyup)="onSearch($event)"/> 
     </form>
 
     <button class="btn-new decoration-none" (click)="showPopUp()">
