--- a/src/app/components/pokemons-grid/pokemons-grid.component.css
+++ b/src/app/components/pokemons-grid/pokemons-grid.component.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     align-items: start;
     justify-content: center;
-    margin: 8px;
+    margin-top: 8px;
 }
 
 table {
